<resources>
    <string name="app_name">Memory_game</string>
    <string name="_00_00">00:00</string>
    <string name="memory_game">Memory game</string>
    <string name="start">Start</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="select_difficulty">Select difficulty:</string>
    <string name="exit">Exit</string>
</resources>